turtleart.smallsquare.SmallSquare.scala.error
Erreur de compilation :
SmallSquare:2: error: illegal start of simple pattern
  for(var i->1 to 4){
      ^SmallSquare:6: error: '<-' expected but '}' found.
} 
^