turtleart.smallsquare.SmallSquare.scala.code
override def run() {
  for(var i->1 to 4){
    avance(100);
    droite(90);
  }
}